<resources>
    <string name="app_name">OnMars</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_rovers_str">Марсоходы</string>
    <string name="launch_date">Дата запуска:</string>
    <string name="landing_date">Дата приземления:</string>
    <string name="status">Статус:</string>
    <string name="max_sol">Макс. марсианских солнц:</string>
    <string name="max_date">Максимальная дата:</string>
    <string name="total_photos">Количество фото:</string>
    <string name="main_menu_back">Назад</string>
    <string name="button_home">Главная</string>
    <string name="button_favorites">Избранное</string>
    <string name="favorites">favorites</string>
    <string name="share">Поделиться</string>
    <string name="save">Сохранить</string>
    <string name="empty_tv_if_empty_favorites">Пока что тут нет фото.\\n\\n\\nСначала добавьте фото.</string>
    <string name="choose_date">Выберите дату:</string>
    <string name="choose_camera">Для показа фото выберите камеру марсохода:</string>
</resources>